# puyoai

./: .gitignore  Cargo.toml
ai/: Cargo.toml
ai/src/: ai_move.rs  build_ai.rs  debug.rs  evaluator.rs  ignite_key.rs  key_type.rs  lib.rs  opener_book.rs  opponent_status.rs  path.rs  potential.rs
ai/src/evaluator/: nn_evaluator.rs  simple_evaluator.rs
console/: Cargo.toml
console/src/: console.rs  lib.rs
env/: Cargo.toml
env/src/: board.rs  board_bit.rs  env.rs  event_type.rs  lib.rs  ojama_status.rs  puyo_kind.rs  puyo_status.rs  rotation.rs  split_board.rs  vector2.rs
src/: battle_env.rs  core.rs  field.rs  log.rs  main.rs  ppc_wrapper.rs  problems.rs
src/problems/: battle_problem.rs  score_problem.rs
tests/: bitboard_test.rs
