[package]
name = "puyoai"
version = "0.1.0"
edition = "2021"


[dependencies]
env = { path = "./env" }
ai = { path = "./ai" }
console = { path = "./console" }
ppc = { path = "../ppc", optional = true }
log = { version = "0.4.22", features = [] }
chrono = "0.4.38"
strum = { version = "0.26.3", features = ["derive"] }
ron = "0.7.0"
rand = "0.3.0"
revonet = { path = "../revonet" }
rayon = "1.10"

serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"

[workspace]
members = [
    "env",
    "ai",
    "console",
]


[features]
default = []
game=["ppc"]

